Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -764,16 +764,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'San Antonio'"
+       "'Pyeongchang'"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
