--- a/index.ipynb
+++ b/index.ipynb
@@ -921,7 +921,7 @@
    "outputs": [],
    "source": [
     "top_travel_cities.append('Solta')\n",
-    "print"
+    "top_travel_cities"
    ]
   },
   {
